{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 60,
  "lineage": "24b9d3ab-2df8-2449-dbba-fc0377be7e45",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myapp_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084a0c3b875f45d4d",
            "association_id": "eipassoc-036ce7abfaa3fb22c",
            "domain": "vpc",
            "id": "eipalloc-084a0c3b875f45d4d",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-07acdcca8e9b4dd67",
            "private_dns": "ip-172-16-48-246.ap-south-1.compute.internal",
            "private_ip": "172.16.48.246",
            "public_dns": "ec2-13-126-144-135.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.144.135",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mario-prod-eip"
            },
            "tags_all": {
              "Name": "mario-prod-eip",
              "env": "prod",
              "project": "mario"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "web_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:884464813654:loadbalancer/web-elb",
            "availability_zones": [
              "ap-south-1a",
              "ap-south-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-elb-1972695524.ap-south-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "web-elb",
            "idle_timeout": 60,
            "instances": [
              "i-0af16994457c3e64c",
              "i-0bd56d035a27da9ad"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 443,
                "lb_protocol": "https",
                "ssl_certificate_id": "arn:aws:acm:ap-south-1:884464813654:certificate/8edc4bf6-f77c-4b0c-8ba6-5158968c7726"
              }
            ],
            "name": "web-elb",
            "security_groups": [
              "sg-06096e2975530707b"
            ],
            "source_security_group": "884464813654/mario-prod-frontend",
            "source_security_group_id": "sg-06096e2975530707b",
            "subnets": [
              "subnet-0356826dddc04e5d6",
              "subnet-06ead9a219a5367a1"
            ],
            "tags_all": {
              "env": "prod",
              "project": "mario"
            },
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_acm_certificate.mario",
            "aws_security_group.frontend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myapp_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:884464813654:internet-gateway/igw-0ecfe4e723bfec4f5",
            "id": "igw-0ecfe4e723bfec4f5",
            "owner_id": "884464813654",
            "tags": {
              "Name": "mario-prod"
            },
            "tags_all": {
              "Name": "mario-prod",
              "env": "prod",
              "project": "mario"
            },
            "vpc_id": "vpc-0f69cec216e0caf80"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:884464813654:targetgroup/mario-prod-TG/b0b8bd3be1f8cad1",
            "arn_suffix": "targetgroup/mario-prod-TG/b0b8bd3be1f8cad1",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:884464813654:targetgroup/mario-prod-TG/b0b8bd3be1f8cad1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mario-prod-TG",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags_all": {
              "env": "prod",
              "project": "mario"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "alb",
            "vpc_id": "vpc-0b854d8eefb150436"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "myapp_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084a0c3b875f45d4d",
            "association_id": "eipassoc-036ce7abfaa3fb22c",
            "connectivity_type": "public",
            "id": "nat-0b16edbbe1c88c199",
            "network_interface_id": "eni-07acdcca8e9b4dd67",
            "private_ip": "172.16.48.246",
            "public_ip": "13.126.144.135",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07e97e085e55690cc",
            "tags": {
              "Name": "mario-prod-NAT-gateway"
            },
            "tags_all": {
              "Name": "mario-prod-NAT-gateway",
              "env": "prod",
              "project": "mario"
            }
          },
          "dependencies": [
            "aws_eip.myapp_eip",
            "aws_internet_gateway.myapp_igw",
            "aws_subnet.public-1",
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:884464813654:route-table/rtb-08885afee5e70c9f8",
            "id": "rtb-08885afee5e70c9f8",
            "owner_id": "884464813654",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b16edbbe1c88c199",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mario-prod-private-route_table"
            },
            "tags_all": {
              "Name": "mario-prod-private-route_table",
              "env": "prod",
              "project": "mario"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f69cec216e0caf80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.myapp_eip",
            "aws_internet_gateway.myapp_igw",
            "aws_nat_gateway.myapp_nat",
            "aws_subnet.public-1",
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:884464813654:route-table/rtb-0ce3df7b852ccd966",
            "id": "rtb-0ce3df7b852ccd966",
            "owner_id": "884464813654",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ecfe4e723bfec4f5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mario-prod-public-route_table"
            },
            "tags_all": {
              "Name": "mario-prod-public-route_table",
              "env": "prod",
              "project": "mario"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f69cec216e0caf80"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myapp_igw",
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f2619e45d19d961",
            "route_table_id": "rtb-08885afee5e70c9f8",
            "subnet_id": "subnet-007e6fcf87a316053"
          },
          "dependencies": [
            "aws_eip.myapp_eip",
            "aws_internet_gateway.myapp_igw",
            "aws_nat_gateway.myapp_nat",
            "aws_route_table.private",
            "aws_subnet.private-1",
            "aws_subnet.public-1",
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fff4085d8f43620",
            "route_table_id": "rtb-08885afee5e70c9f8",
            "subnet_id": "subnet-057123b70ec4e5784"
          },
          "dependencies": [
            "aws_eip.myapp_eip",
            "aws_internet_gateway.myapp_igw",
            "aws_nat_gateway.myapp_nat",
            "aws_route_table.private",
            "aws_subnet.private-2",
            "aws_subnet.public-1",
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc9c4e981b31dd3c",
            "route_table_id": "rtb-08885afee5e70c9f8",
            "subnet_id": "subnet-0a053953b995f8a53"
          },
          "dependencies": [
            "aws_eip.myapp_eip",
            "aws_internet_gateway.myapp_igw",
            "aws_nat_gateway.myapp_nat",
            "aws_route_table.private",
            "aws_subnet.private-3",
            "aws_subnet.public-1",
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06164bca70e0bbadd",
            "route_table_id": "rtb-0ce3df7b852ccd966",
            "subnet_id": "subnet-07e97e085e55690cc"
          },
          "dependencies": [
            "aws_internet_gateway.myapp_igw",
            "aws_route_table.public",
            "aws_subnet.public-1",
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f343c1bea70e0fd7",
            "route_table_id": "rtb-0ce3df7b852ccd966",
            "subnet_id": "subnet-0c1da2b4f43a8fec8"
          },
          "dependencies": [
            "aws_internet_gateway.myapp_igw",
            "aws_route_table.public",
            "aws_subnet.public-2",
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4600063033c2a2d",
            "route_table_id": "rtb-0ce3df7b852ccd966",
            "subnet_id": "subnet-02fc91fd2dc8621f2"
          },
          "dependencies": [
            "aws_internet_gateway.myapp_igw",
            "aws_route_table.public",
            "aws_subnet.public-3",
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:884464813654:security-group/sg-06096e2975530707b",
            "description": "mario-prod-frontend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06096e2975530707b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mario-prod-frontend",
            "name_prefix": "",
            "owner_id": "884464813654",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mario-prod-frontend"
            },
            "tags_all": {
              "Name": "mario-prod-frontend",
              "env": "prod",
              "project": "mario"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b854d8eefb150436"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:884464813654:subnet/subnet-007e6fcf87a316053",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007e6fcf87a316053",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884464813654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mario-prod-private-1"
            },
            "tags_all": {
              "Name": "mario-prod-private-1",
              "env": "prod",
              "project": "mario"
            },
            "vpc_id": "vpc-0f69cec216e0caf80"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:884464813654:subnet/subnet-057123b70ec4e5784",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.160.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057123b70ec4e5784",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884464813654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mario-prod-private-2"
            },
            "tags_all": {
              "Name": "mario-prod-private-2",
              "env": "prod",
              "project": "mario"
            },
            "vpc_id": "vpc-0f69cec216e0caf80"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:884464813654:subnet/subnet-0a053953b995f8a53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.16.192.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a053953b995f8a53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884464813654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mario-prod-private-3"
            },
            "tags_all": {
              "Name": "mario-prod-private-3",
              "env": "prod",
              "project": "mario"
            },
            "vpc_id": "vpc-0f69cec216e0caf80"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:884464813654:subnet/subnet-07e97e085e55690cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.16.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e97e085e55690cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "884464813654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mario-prod-public-1"
            },
            "tags_all": {
              "Name": "mario-prod-public-1",
              "env": "prod",
              "project": "mario"
            },
            "vpc_id": "vpc-0f69cec216e0caf80"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:884464813654:subnet/subnet-0c1da2b4f43a8fec8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.16.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1da2b4f43a8fec8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "884464813654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mario-prod-public-2"
            },
            "tags_all": {
              "Name": "mario-prod-public-2",
              "env": "prod",
              "project": "mario"
            },
            "vpc_id": "vpc-0f69cec216e0caf80"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:884464813654:subnet/subnet-02fc91fd2dc8621f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.16.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fc91fd2dc8621f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "884464813654",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mario-prod-public-3"
            },
            "tags_all": {
              "Name": "mario-prod-public-3",
              "env": "prod",
              "project": "mario"
            },
            "vpc_id": "vpc-0f69cec216e0caf80"
          },
          "dependencies": [
            "aws_vpc.myapp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myapp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:884464813654:vpc/vpc-0f69cec216e0caf80",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0a9f9d3a0cd72aea6",
            "default_route_table_id": "rtb-024ebc0999c5336db",
            "default_security_group_id": "sg-03f6941d2e0eb0090",
            "dhcp_options_id": "dopt-09c4e85750c253443",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f69cec216e0caf80",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-024ebc0999c5336db",
            "owner_id": "884464813654",
            "tags": {
              "Name": "mario-prod"
            },
            "tags_all": {
              "Name": "mario-prod",
              "env": "prod",
              "project": "mario"
            }
          }
        }
      ]
    }
  ]
}